# qsharp-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build_swift.sh  uniffi.toml
.github/workflows/: ci.yml  release.yml
examples/csharp/console/: Program.cs  console.csproj
examples/kotlin/console/: main.kt  run.sh
examples/python/jupyter/: init.sh  notebook.ipynb  qasm.ipynb  quantikz.ipynb  quokka.ipynb  requirements.txt
examples/swift/console/: main.swift  run.sh
src/: circuit.rs  lib.rs  noise.rs  qasm.rs  qsharp-bridge.udl  quantikz.rs  sim.rs
tests/: tests.rs  tests_circuit.rs  tests_estimate.rs  tests_noise.rs  tests_qasm.rs  tests_qir.rs  tests_quantikz.rs  tests_run.rs
tests/assets/: entanglement.qs  entanglement_noreset.qs  hello.qs  loss_single_qubit.qs  teleportation.qs
