[package]
name = "qsharp-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
qsc = { git = "https://github.com/microsoft/qsharp.git", tag = "v1.10.1" }
resource_estimator = { git = "https://github.com/microsoft/qsharp.git", tag = "v1.10.1" }
thiserror = "1.0"
num-bigint = "0.4.5"
num-complex = "0.4"
uniffi = { version = "0.25.0", features=["build"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
uniffi = { version = "0.25.0", features=["build"] }
uniffi_build = "0.25.0"
uniffi_bindgen = "0.25.0"