[package]
name = "qsharp-bridge"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
qsc = { git = "https://github.com/microsoft/qdk.git", tag = "v1.21.0" }
resource_estimator = { git = "https://github.com/microsoft/qdk.git", tag = "v1.21.0" }
thiserror = "1.0"
num-bigint = "0.4.5"
num-complex = "0.4"
uniffi = { version = "0.29.4", features=["build"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
uniffi = { version = "0.29.4", features=["build"] }
uniffi_build = "0.29.4"
uniffi_bindgen = "0.29.4"   